--- a/ASPProjekat.API/appsettings.json
+++ b/ASPProjekat.API/appsettings.json
@@ -6,13 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "SmtpSettings": {
+  "MailSettings": {
     "Server": "smtp.gmail.com",
-    "Port": 465,
+    "Port": 587,
     "SenderName": "Mihajlo",
-    "SenderEmail": "mihajlo.jovanovic.52.21@ict.edu.rs",
-    "Username": "mihajlo.jovanovic.52.21@ict.edu.rs",
-    "Password": "fmhjphukwclcgeab",
-    "UseSSL": true
+    "SenderEmail": "mihajlojovanovic41@gmail.com",
+    "Username": "Miksa",
+    "Password": "vgat axxg ddlg ninn",
+    "Requires Authentication": "Yes",
+    "UseTLS": true
   }
 }
